<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="again_out">再按一次退出程序</string>
    <string name="call_customer_service">联系客服</string>
    <string name="fc_toast">抱歉，程序出现异常，即将退出</string>
    <string name="request_no_network">没有网络连接，请连接后重试</string>
    <string name="request_missing_data">请求数据不完整</string>
    <string name="toast_session_out_of_date">您长时间未登录，会话已过期</string>
    <string name="unlogin">未登录，请重新登录</string>
    <string name="request_session_empty_request_holder">Session过期处理时，RequestHolder为空</string>
    <string name="request_session_queue_overflow">Session过期处理时，队列溢出</string>
    <string name="request_session_failure">Session过期处理时，请求Session失败</string>
    <string name="request_error">网络异常，请稍候重试</string>
    <string name="request_error_click_to_request">当前网络繁忙，点击按钮重新加载</string>
    <string name="request_service_error">服务异常，请稍候重试</string>
    <string name="request_service_timeout">连接服务超时，请检查您的网络或稍候重试</string>
    <string name="toast_refresh_failure">刷新失败，请稍候重试</string>
    <string name="toast_refresh_failure2">加载失败，请向下拖动刷新重试</string>
    <string name="toast_load_more_failure">加载失败，请稍候重试</string>
    <string name="toast_load_more_failure2">加载失败，请点击重试</string>
    <string name="toast_no_more_data">已是最后一页了</string>
    <string name="toast_no_more_data2">没有更多数据</string>
    <string name="toast_refreshing">正在刷新中</string>
    <string name="toast_load_detail_error_disable">很抱歉，订单已撤销</string>
    <string name="toast_load_detail_error_pls_try_again">刷新详情失败，请稍候重试</string>
    <string name="toast_load_bidden_drivers_error_pls_try_again">刷新竞价列表失败，请稍候重试</string>
    <string name="toast_load_bidden_drivers_empty">当前没人竞价，欢迎竞价!</string>
    <string name="toast_empty_detail">暂时没有数据，请刷新重试</string>
    <string name="mobile_invalid">手机号格式不正确!</string>
    <string name="recommend_content_empty">没有填写推荐信息内容!</string>
    <string name="pass_no_like">您两次输入的密码不同，请重新输入</string>
    <string name="LoadingError">当前网络繁忙，点击按扭重新加载</string>
    <string name="LoadingNo">请检查您的手机是否联网，点击按扭重新加载</string>
    <string name="REQUEST_FAILURE">当前网络繁忙，请稍后重试！</string>
    <string name="version_upgrade">升级</string>
    <string name="driver_version_title">560交运配货-接货版</string>
    <string name="shipper_version_title">560交运配货-发货版</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_end">刷新成功</string>
    <string name="loading">正在加载...</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败</string>
    <string name="title_activity_login">Sign in</string>
    <string name="skip">跳过</string>
    <string name="register_allow">注册代表你已同意</string>
    <string name="service_contract">《服务协议》</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_set_login_password">请设置登录密码（6-16位）</string>
    <string name="referrer_phone_number">推荐人手机（可不填写）</string>
    <string name="obtain">获取</string>
    <string name="voice_verification_code">语音验证码</string>
    <string name="company_name">上海拓景信息科技有限公司</string>
    <string name="next_step">下一步</string>
    <string name="register">注册</string>
    <string name="new_user_register">新用户注册</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hava_not_limit">全境</string>
    <string name="call">呼叫</string>
    <string name="complete">完成</string>
    <string name="password_format_error">您输入的密码格式错误，请重新输入！</string>
    <string name="password_is_too_simple">您输入的密码过于简单，请重新输入！</string>
    <string name="password_is_sequential">密码不能是连续的数字</string>
    <string name="password_is_same_letter">密码不能是相同纯字母</string>
    <string name="password_is_same_number">密码不能是相同纯数字</string>
    <string name="phone_format_error">您输入的手机格式有误，请重新入</string>
    <string name="verify_code_error">您输入的验证码错误，请重新输入</string>
    <string name="referrer_phone_number_error">推荐人手机号格式错误！</string>
    <string name="is_get_voice_verify_code">是否获取语音验证码？</string>
    <string name="network_error">网络中断，请检查您的网络状态</string>
    <string name="password_login">密码登录</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="cant_receive_code1">收不到短信？请使用</string>
    <string name="voice_code">语音验证</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="send_success">提货码发送成功！等待司机确认提货。</string>
    <string name="send_fail">发送失败</string>
    <string name="operate_success">操作成功</string>
    <string name="authentication_success">审核成功</string>
    <string name="location_error">无法获取当前位置，请重试</string>
    <string name="click_do_location">点击获取定位</string>
    <string name="authentication_can_up_reputation">认证可以提高信誉度，增快成交速度，享受平台优惠政策。</string>
    <string name="authenticationing">客服正在审核中，请稍等片刻。</string>
    <string name="authenticationed">恭喜您，您的实名认证已审核通过。</string>
    <string name="authentication_fail">审核失败，该身份已被注册。</string>
    <string name="authentication_fail2">审核失败</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="identity_authentication">身份认证</string>
    <string name="car_authentication">车辆认证</string>
    <string name="avatar">头像</string>
    <string name="upload_again">重新上传</string>
    <string name="upload_avatar">上传头像</string>
    <string name="id_card">身份证</string>
    <string name="upload_id_card_front">上传身份证正面照</string>
    <string name="no_has_sdcard">没有SD卡，无法拍照!</string>
    <string name="no_has_permission">拍照权限被拒绝，请您重新授权</string>
    <string name="no_has_sd_permission">SD卡读取写入权限被拒绝，请您重新授权</string>
    <string name="submit_examine">提交审核</string>
    <string name="driving_license">行驶证</string>
    <string name="upload_driving_license">上传驾驶证</string>
    <string name="enterprise_license">营运证</string>
    <string name="upload_enterprise_license">上传营运证</string>
    <string name="car_front_photo">车头照</string>
    <string name="upload_car_front_photo">上传车头照</string>
    <string name="upload_vehicle_license">上传行驶证</string>
    <string name="driver_must_fill">（个体司机必填）</string>
    <string name="enterprise_must_fill">（企业用户必填）</string>
    <string name="car_number">车牌照</string>
    <string name="car_number_color">车牌颜色</string>
    <string name="please_input_car_number">请输入您的车牌号</string>
    <string name="car_number_is_blue">蓝牌</string>
    <string name="car_number_is_yellow">黄牌</string>
    <string name="type_length">车型车长</string>
    <string name="please_select_type_length">请选择车型车长</string>
    <string name="please_input_trusteeship_amount">请输入托管金额</string>
    <string name="please_move">请把身份证正面移入框内</string>
    <string name="please_clear">请按照示例提交真实照片，确保清晰，无遮挡。</string>
    <string name="please_input_correct_phone_number">手机号格式错误，请重新输入</string>
    <string name="register_address">注册地</string>
    <string name="upload_door_photo">上传门头照</string>
    <string name="upload_business_card">上传名片</string>
    <string name="upload_invoice">上传机打发货单</string>
    <string name="upload_business_license">上传营业执照</string>
    <string name="door_photo">门头照</string>
    <string name="business_card">名片</string>
    <string name="invoice">机打发货单</string>
    <string name="business_license">营业执照</string>
    <string name="deliver_goods">发货</string>
    <string name="habit">常发货源</string>
    <string name="deliver_info">发货信息</string>
    <string name="please_select_deliver_address">请选择发货地</string>
    <string name="please_select_receipt_address">请选择收货地</string>
    <string name="please_select_deliver_address2">请选择发货地址</string>
    <string name="please_select_receipt_address2">请选择收货地址</string>
    <string name="please_select_address">请选择所在地区</string>
    <string name="please_input_detailed_address">请输入详细地址</string>
    <string name="please_input_search_address">请输入搜索地址</string>
    <string name="please_input_deliver_name">请输入发货人姓名</string>
    <string name="please_input_deliver_address">请输入发货地址</string>
    <string name="please_input_receipt_name">请输入收货人姓名</string>
    <string name="please_input_receipt_address">请输入收货地址</string>
    <string name="please_input_deliver_phone">成交前司机无法查看此信息</string>
    <string name="please_input_receipt_phone">请输入收货人手机号</string>
    <string name="please_input_goods_number">请输入货物数量</string>
    <string name="please_input_goods_number2">请填写货物数量</string>
    <string name="please_input_amount">请输入金额</string>
    <string name="receipt_info">收货信息</string>
    <string name="fixed">固定</string>
    <string name="range">范围</string>
    <string name="default_unit">吨</string>
    <string name="pay_way">运费支付方式</string>
    <string name="take_time">提货时间</string>
    <string name="ahead">提货付</string>
    <string name="delivery">到货付</string>
    <string name="default_pay_way">货到付款</string>
    <string name="default_take_time">随到随走</string>
    <string name="remarks">其他货物信息</string>
    <string name="promise">我承诺:本人发布的货源为真实货源。</string>
    <string name="other_information">其他信息</string>
    <string name="location">所在地区</string>
    <string name="location_detailed">详细地址</string>
    <string name="input_deliver_info">录入发货信息</string>
    <string name="input_receipt_info">录入收货信息</string>
    <string name="select">选择</string>
    <string name="is_trusteeship_free">是否托管运费</string>
    <string name="dont_exceed_city">不允许超出%1s</string>
    <string name="add_goods_success">发货成功</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="clolse_listen_order">暂停听单</string>
    <string name="home">首页</string>
    <string name="my_order">我的订单</string>
    <string name="service_station">服务站</string>
    <string name="person_center">个人中心</string>
    <string name="smart_search_goods">智能找货</string>
    <string name="listen_order_closed">听单已暂停</string>
    <string name="listen_order_opened">听单已开启</string>
    <string name="setting">设置</string>
    <string name="contacts_phone">联系电话</string>
    <string name="contacts">联系人</string>
    <string name="contacts2">联系人啊</string>
    <string name="contacts_title">常用联系人</string>
    <string name="contacts_select">选择联系人</string>
    <string name="contacts_add">添加联系人</string>
    <string name="no_has_contacts">暂无常用联系人，去添加吧！</string>
    <string name="show_more_contacts">查看更多联系人</string>
    <string name="contacts_input_hint_username">请输入联系人姓名</string>
    <string name="contacts_input_hint_city">请选择收货地址</string>
    <string name="contacts_input_hint_address">请输入详细地址</string>
    <string name="contacts_edit">编辑联系人</string>
    <string name="contacts_input_hint_phone">请输入联系人常用号码</string>
    <string name="oftengoods_title">常发货源</string>
    <string name="oftengoods_nodata">您还没有常发货源，快去发货吧！</string>
    <string name="immediate_login">直接登录</string>
    <string name="register_now">立即注册</string>
    <string name="goods_detail">货源详情</string>
    <string name="order_detail">订单详情</string>
    <string name="reset_password_warning">密码由6-16位数字和字母组成，区分大小写</string>
    <string name="forget_password_warning">为确保是您本人操作，请完成以下验证</string>
    <string name="refind_password">密码找回</string>
    <string name="change_text_size">字体大小</string>
    <string name="change_password">修改密码</string>
    <string name="referrer">推荐人</string>
    <string name="about_us">关于我们</string>
    <string name="check_updata">检查升级</string>
    <string name="clear_cache">清除缓存</string>
    <string name="quit_account">退出账号</string>
    <string name="clear_message">清空私信内容</string>
    <string name="add_black_list">拉入黑名单</string>
    <string name="black_list_detail">将不再收到对方私信</string>
</resources>