<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/spacing_15"
    android:paddingRight="@dimen/spacing_15"
    tools:context="com.topjet.common.user.view.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_cur_login_way"
        style="@style/TvPageTitle"
        android:layout_marginTop="87dp"
        android:text="@string/refind_password"/>

    <TextView
        style="@style/tv_size_12_color_96_style"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/forget_password_warning"
        />

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        >

        <EditText
            android:id="@+id/et_phonenumber"
            style="@style/EditTextRegister"
            android:hint="@string/please_input_phone_number"
            android:inputType="number"
            android:maxLength="11"
            />

        <ImageView
            android:id="@+id/iv_delete_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_12"
            android:layout_toLeftOf="@+id/tv_send_code"
            android:src="@drawable/icon_delete_nor"/>

        <TextView
            android:id="@+id/tv_send_code"
            style="@style/BtnCheckCode"
            android:text="@string/get_verification_code"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <!-- 验证码输入框 -->
        <EditText
            android:id="@+id/et_check_code"
            style="@style/EditTextRegister"
            android:hint="@string/please_input_verification_code"
            android:inputType="number"
            android:maxLength="6"
            />


        <ImageView
            android:id="@+id/iv_delete_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_delete_nor"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_next"
        style="@style/BtnLargeWithCorner"
        android:layout_marginTop="@dimen/spacing_25"
        android:text="@string/next_step"/>


    <LinearLayout
        android:id="@+id/ll_send_voice"
        style="@style/Layout_Wrap_Wrap"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/spacing_16"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/Layout_Wrap_Wrap"
            android:gravity="center"
            android:text="@string/cant_receive_code1"
            android:textColor="@color/color_aaaaaa"/>

        <TextView
            android:id="@+id/tv_voice_code"
            style="@style/Layout_Wrap_Wrap"
            android:gravity="center"
            android:text="@string/voice_code"
            android:textColor="@color/v3_common_blue"/>
    </LinearLayout>


</LinearLayout>