<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/spacing_15"
    android:paddingRight="@dimen/spacing_15"
    tools:context="com.topjet.common.user.view.activity.LoginActivity">


    <TextView
        android:id="@+id/tv_cur_login_way"
        style="@style/Layout_Wrap_Wrap"
        android:layout_marginTop="@dimen/spacing_50"
        android:text="@string/refind_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size24"/>

    <TextView
        style="@style/tv_size_12_color_96_style"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/reset_password_warning"/>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        >

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextResetPassword"
            android:hint="@string/please_input_password"
            />

        <ImageView
            android:id="@+id/iv_see_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/signin_icon_closeeye_nor_blue"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/et_password2"
            style="@style/EditTextResetPassword"
            android:hint="@string/please_confirm_password"
            />


        <ImageView
            android:id="@+id/iv_see_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/signin_icon_closeeye_nor_blue"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_large_height"
        android:layout_marginTop="@dimen/spacing_25"
        android:background="@drawable/selector_btn_corner_blue"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size17"/>
</LinearLayout>